--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./build/app.js",
-    "build": "tsc",
-    "watch": "tsc -w",
+    "build": "npx tsc",
+    "watch": "npx tsc -w",
     "dev": "nodemon ./build/app.js"
   },
   "author": "sourab",
@@ -41,7 +41,6 @@
     "@types/node": "^20.11.1",
     "@types/uuid": "^9.0.7",
     "@types/validator": "^13.11.8",
-    "nodemon": "^3.0.2",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.0.2"
   }
 }
