--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "kdsfsd"
   ],
   "dependencies": {
+    "typescript": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,8 +31,7 @@
     "stripe": "^14.13.0",
     "tsc": "^2.0.4",
     "uuid": "^9.0.1",
-    "validator": "^13.11.0",
-    "typescript": "^5.3.3"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
