--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node ./build/app.js",
     "build": "npx tsc",
-    "watch": "tsc -w",
-    "dev": "nodemon ./build/app.js"
+    "watch": "npx tsc -w",
+    "dev": "npx nodemon ./build/app.js"
   },
   "author": "sourab",
   "license": "ISC",
@@ -20,21 +20,28 @@
     "kdsfsd"
   ],
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "random-avatar-generator": "^2.0.0",
     "stripe": "^14.13.0",
     "tsc": "^2.0.4",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.1",
